--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -183,7 +183,7 @@
 </nav>
   <nav class="navbar navbar-expand-md navbar-dark bg-white ">
     <div class="container-fluid mt-1 ">
-     <a href="{% url 'index' %}"> <img class="img-fluid" style="width: 50px;margin-left: 20px;" src="../static/coc-logo.png" alt=""></a>
+     <a href="{% url 'index' %}"> <img class="img-fluid" style="width: 50px;margin-left: 20px;" src="https://i.ibb.co/TgkYtHv/coc-logo.png" alt=""></a>
 
       <div style="background-image: url('');" class=" m-0 text-white">
         <button class="btn btn-secondary mt-3 m-3 " type="button" data-bs-toggle="offcanvas" data-bs-target="#carousel">
@@ -199,7 +199,7 @@
       <center>
         <div class="container">
           <br>
-          <img class="img-fluid" style="width: 80px;" src="../static/heaven.png" alt="">
+          <img class="img-fluid" style="width: 80px;" src="https://i.ibb.co/crsRw4F/believe.jpg" alt="">
           <h1 style="font-size: 70px;font-family: 'Oswald', sans-serif;">WE HOPE IN GOD</h1>
         </div>
       </center>
@@ -231,7 +231,7 @@
                       
                       <h2 style="color: white;font-weight: lighter;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);" class="card-title ">Live Stream With Us </h2>
 
-                      <img class="img-fluid" src="../static/connect-removebg.png" alt="" width="280px">
+                      <img class="img-fluid" src="https://i.ibb.co/Cb3pLHv/connect-removebg.png" alt="" width="280px">
 
                       <a href="{% url 'livestream' %}" class="btn btn-outline-light">LiveStream</a>
                     </div>
@@ -245,7 +245,7 @@
                   <div class="card-body">
                     <h2 style="color: white;font-weight: lighter;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);" class="card-title ">OUR MINISTRIES</h2>
 
-                    <img class="img-fluid" src="../static/3d-bible-rem.png" alt="" width="180px">
+                    <img class="img-fluid" src="https://i.ibb.co/DMJpnLw/3d-bible-rem.png" alt="" width="180px">
 
                     <a href="{% url 'ourministries' %}" class="btn btn-outline-light">Read More</a>
                   </div>
@@ -259,7 +259,7 @@
                 <div class="card-body">
                   
                   <h2 style="color: white;font-weight: lighter;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);" class="card-title">Giving</h2>
-                    <img class="img-fluid" src="../static/dnb.png" alt="" width="220px">
+                    <img class="img-fluid" src="https://i.ibb.co/Cs8P4pT/dnb.png" alt="" width="220px">
 
                   <a href="{% url 'donate' %}" class="btn btn-outline-light">Give Now</a>
                 </div>
@@ -293,7 +293,7 @@
     <br>
 
     <section
-      style="background-image: url('../static/praying-hands.webp');background-position: center;background-size: cover;color: white;" class="p-5 img-fluid">
+      style="background-image: url('https://i.ibb.co/bN3XQ5D/praying-hands.webp');background-position: center;background-size: cover;color: white;" class="p-5 img-fluid">
       <div class="container p-2">
     
         
